--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://static.ejudd.uk/bower_components/normalize-css/normalize.css">
   <link rel="stylesheet" href="dist/beaconing/app.css">
-  <link rel="stylesheet" href="dist/fontello/fontello.css">
+  <link rel="stylesheet" href="dist/beaconing/fontello/fontello.css">
   <link rel="stylesheet" href="dist/accessabar/app.css">
   <script src="dist/accessabar/bundle.js"></script>
   <title>{{ .pageTitle }}</title>
