--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://static.ejudd.uk/bower_components/normalize-css/normalize.css">
-  <link rel="stylesheet" href="dist/beaconing/app.css">
-  <link rel="stylesheet" href="dist/beaconing/fontello/fontello.css">
-  <link rel="stylesheet" href="dist/accessabar/app.css">
-  <script src="dist/accessabar/bundle.js"></script>
-  <script src="dist/beaconing/core.js"></script>
+  <link rel="stylesheet" href="{{ .host }}dist/beaconing/app.css">
+  <link rel="stylesheet" href="{{ .host }}dist/beaconing/fontello/fontello.css">
+  <link rel="stylesheet" href="{{ .host }}dist/accessabar/app.css">
+  <script src="{{ .host }}dist/accessabar/bundle.js"></script>
+  <script src="{{ .host }}dist/beaconing/core.js"></script>
   <title>{{ .pageTitle }}</title>
 </head>
 <body>
-  <script src="{{ .pageScript }}"></script>
+  <script src="{{ .host }}{{ .pageScript }}"></script>
 </body>
 </html>
