--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/dist/accessabar/app.css">
   <script src="/dist/accessabar/bundle.js"></script>
   <script src="/dist/beaconing/core.js"></script>
-  <title>{{ .pageTitle }}</title>
+  <title>{{ .pageTitle }} &mdash; {{ .userName }}</title>
 </head>
 <body>
   <script src="/{{ .pageScript }}"></script>
