--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/dist/beaconing/app.css">
   <link rel="stylesheet" href="/dist/beaconing/fontello/fontello.css">
   <link rel="stylesheet" href="/dist/accessabar/app.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script src="/dist/accessabar/bundle.js"></script>
   <script src="/dist/beaconing/core.js"></script>
   <title>{{ .pageTitle }}</title>
