added chart dependancy for caching

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/dist/accessabar/app.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script src="/dist/accessabar/bundle.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
   <script src="/dist/beaconing/core.js"></script>
   <title>{{ .pageTitle }}</title>
 </head>
