--- a/backend/upload/index.html
+++ b/backend/upload/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 	<form method="POST" action="/api/v1/upload/13/" enctype="multipart/form-data">
-		<input type="file" name="file">
+		<input type="file" name="files" multiple>
 		<input type="submit">
 	</form>
 </body>
