--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,11 +5,11 @@
     <title>Example</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="X-UA-Compatible" content="ie=edge">
-    <link href="/dist/example/app.css" rel="stylesheet">
-    <link rel="preload" href="/dist/example/page.js" as="script">
-    <link rel="prefetch" href="/dist/example/page.js">
+    <link href="/dist/beaconing/app.css" rel="stylesheet">
+    <link rel="preload" href="/dist/beaconing/page.js" as="script">
+    <link rel="prefetch" href="/dist/beaconing/page.js">
 </head>
 <body>
-    <script type="text/javascript" src="/dist/example/page.js"></script>
+    <script type="text/javascript" src="/dist/beaconing/page.js"></script>
 </body>
 </html>
